# azurewebsockets

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Readme.md
examples/standaloneclient/: CMakeLists.txt  client.cpp
infrastructure/: SasToken.cpp  SasToken.h
infrastructure/test/: Factory_Mock.h  Factory_Test.cpp  SasToken_Test.cpp
protocolstack/: ProtocolStack.h  StackFactory.cpp  StackFactory.h
protocolstack/presentation/: Presentation.h
protocolstack/presentation/test/: BinaryParser_Test.cpp  BinaryPrintFormat_Test.cpp  Decoder_Test.cpp  JsonParser_Test.cpp  JsonPrintFormat_Test.cpp  KeyValueParser_Test.cpp  KeyValuePrintFormat_Test.cpp  Message_Test.cpp  Null_Test.cpp
protocolstack/session/: AzureAmqpWs.cpp  AzureAmqpWs.h  Configuration.h  Factory.cpp  Factory.h  Session.h
